Kiza Setup, les onze pages de réglages, et la distribution signée
Quatre chantiers depuis la 0.0.255.

L'INSTALLATEUR — kiza-setup/

L'assistant NSIS est remplacé par une application Tauri : une fenêtre,
deux cases, un bouton. Le launcher voyage à l'intérieur, compressé en
zstd, donc rien n'est téléchargé pendant l'installation.

La ligne de commande n'était pas un choix : tauri-plugin-updater lance
l'installateur avec /P /R /UPDATE /ARGS, donc ces commutateurs veulent
dire ici ce qu'ils veulent dire dans NSIS, ou les mises à jour cassent en
silence. cli.rs réimplémente le découpage de CommandLineToArgvW parce que
l'updater échappe avec les règles MSVC.

Trois défauts attrapés à l'essai plutôt qu'en production :
- l'ancien NSIS écrivait InstallLocation entre guillemets ; lu tel quel,
  la première mise à jour créait une deuxième copie de Kiza à côté ;
- le désinstalleur réinstallait — rien ne disait au binaire copié sous le
  nom « Uninstall » lequel des deux il était ;
- un /D= cité produisait un chemin mort : la désinstallation supprimait
  raccourcis et registre, ne trouvait aucun fichier, et annonçait un
  succès.

LES RÉGLAGES — src/components/settings/

Onze pages, chaque contrôle branché sur quelque chose de réel. Un
interrupteur qui ne gouverne rien est une promesse rompue en silence,
donc Notifications n'a que trois cases : ce sont les trois notifications
que le launcher envoie.

Le format de date est lu partout où un moment est écrit. Le nombre de
téléchargements simultanés s'applique à la file vivante — baisser ne
reprend que les créneaux libres, le worker réconcilie à chaque passage.
Le stockage est mesuré en parcourant les dossiers ; instances, mondes et
sauvegardes sont affichés mais jamais proposés à la suppression.

LA DISTRIBUTION — cloudflare/

Cloudflare R2 pour stocker, un Worker pour servir, GitHub en secours et
en dernier : Tauri s'arrête au premier endpoint qui répond.

Le manifeste stocké ne contient pas d'URL — il nomme un fichier, et le
Wor